fix: Replace hardcoded absolute links with relative paths for GitHub Pages deployment
- Convert /docs/components/* links to relative paths in components overview
- Fix home page action button links to use relative paths
- Update breadcrumb component examples to use relative navigation
- Fix accessibility documentation component reference link
- Make header background darker for better visual contrast

All links now work correctly in both development and GitHub Pages deployment environments.

--- a/docs/components/breadcrumb-item/index.mdx
+++ b/docs/components/breadcrumb-item/index.mdx
@@ -258,8 +258,8 @@ Experience how breadcrumb items behave in realistic contexts. All examples use a
       <elvt-icon slot="prefix" icon="mdi:book-open-page-variant"></elvt-icon>
       Documentation
     </elvt-breadcrumb-item>
-    <elvt-breadcrumb-item href="/docs/components">Components</elvt-breadcrumb-item>
-    <elvt-breadcrumb-item href="/docs/components/forms">Forms</elvt-breadcrumb-item>
+    <elvt-breadcrumb-item href="../">Components</elvt-breadcrumb-item>
+    <elvt-breadcrumb-item href="../forms">Forms</elvt-breadcrumb-item>
     <elvt-breadcrumb-item current>Input Field</elvt-breadcrumb-item>
   </elvt-breadcrumb>
   
@@ -274,8 +274,8 @@ Experience how breadcrumb items behave in realistic contexts. All examples use a
         <elvt-icon slot="prefix" icon="mdi:book-open-page-variant"></elvt-icon>
         Documentation
       </elvt-breadcrumb-item>
-      <elvt-breadcrumb-item href="/docs/components">Components</elvt-breadcrumb-item>
-      <elvt-breadcrumb-item href="/docs/components/forms">Forms</elvt-breadcrumb-item>
+      <elvt-breadcrumb-item href="../">Components</elvt-breadcrumb-item>
+      <elvt-breadcrumb-item href="../forms">Forms</elvt-breadcrumb-item>
       <elvt-breadcrumb-item current>Input Field</elvt-breadcrumb-item>
     </elvt-breadcrumb>
     
