--- a/docs/components/index.mdx
+++ b/docs/components/index.mdx
@@ -11,7 +11,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Form & Input Components
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/input" className="elvt-component-card">
+  <a href="input/" className="elvt-component-card">
     <div className="elvt-component-icon">📝</div>
     <div className="elvt-component-info">
       <h4>Input</h4>
@@ -19,7 +19,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/select" className="elvt-component-card">
+  <a href="select/" className="elvt-component-card">
     <div className="elvt-component-icon">📋</div>
     <div className="elvt-component-info">
       <h4>Select</h4>
@@ -27,7 +27,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/checkbox" className="elvt-component-card">
+  <a href="checkbox/" className="elvt-component-card">
     <div className="elvt-component-icon">✅</div>
     <div className="elvt-component-info">
       <h4>Checkbox</h4>
@@ -35,7 +35,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/radio" className="elvt-component-card">
+  <a href="radio/" className="elvt-component-card">
     <div className="elvt-component-icon">🔘</div>
     <div className="elvt-component-info">
       <h4>Radio</h4>
@@ -43,7 +43,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/switch" className="elvt-component-card">
+  <a href="switch/" className="elvt-component-card">
     <div className="elvt-component-icon">🔄</div>
     <div className="elvt-component-info">
       <h4>Switch</h4>
@@ -51,7 +51,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/date-picker" className="elvt-component-card">
+  <a href="date-picker/" className="elvt-component-card">
     <div className="elvt-component-icon">📅</div>
     <div className="elvt-component-info">
       <h4>Date Picker</h4>
@@ -59,7 +59,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/textarea" className="elvt-component-card">
+  <a href="textarea/" className="elvt-component-card">
     <div className="elvt-component-icon">📄</div>
     <div className="elvt-component-info">
       <h4>Textarea</h4>
@@ -67,7 +67,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/slider" className="elvt-component-card">
+  <a href="slider/" className="elvt-component-card">
     <div className="elvt-component-icon">🎚️</div>
     <div className="elvt-component-info">
       <h4>Slider</h4>
@@ -75,7 +75,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/file-dropzone" className="elvt-component-card">
+  <a href="file-dropzone/" className="elvt-component-card">
     <div className="elvt-component-icon">📁</div>
     <div className="elvt-component-info">
       <h4>File Dropzone</h4>
@@ -87,7 +87,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Action Components
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/button" className="elvt-component-card">
+  <a href="button/" className="elvt-component-card">
     <div className="elvt-component-icon">🔲</div>
     <div className="elvt-component-info">
       <h4>Button</h4>
@@ -95,7 +95,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/button-group" className="elvt-component-card">
+  <a href="button-group/" className="elvt-component-card">
     <div className="elvt-component-icon">🔳</div>
     <div className="elvt-component-info">
       <h4>Button Group</h4>
@@ -103,7 +103,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/icon-button" className="elvt-component-card">
+  <a href="icon-button/" className="elvt-component-card">
     <div className="elvt-component-icon">⚪</div>
     <div className="elvt-component-info">
       <h4>Icon Button</h4>
@@ -111,7 +111,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/link" className="elvt-component-card">
+  <a href="link/" className="elvt-component-card">
     <div className="elvt-component-icon">🔗</div>
     <div className="elvt-component-info">
       <h4>Link</h4>
@@ -123,7 +123,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Layout & Structure
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/card" className="elvt-component-card">
+  <a href="card/" className="elvt-component-card">
     <div className="elvt-component-icon">🃏</div>
     <div className="elvt-component-info">
       <h4>Card</h4>
@@ -131,7 +131,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/divider" className="elvt-component-card">
+  <a href="divider/" className="elvt-component-card">
     <div className="elvt-component-icon">➖</div>
     <div className="elvt-component-info">
       <h4>Divider</h4>
@@ -143,7 +143,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Navigation Components
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/menu" className="elvt-component-card">
+  <a href="menu/" className="elvt-component-card">
     <div className="elvt-component-icon">📋</div>
     <div className="elvt-component-info">
       <h4>Menu</h4>
@@ -151,7 +151,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/menu-item" className="elvt-component-card">
+  <a href="menu-item/" className="elvt-component-card">
     <div className="elvt-component-icon">📄</div>
     <div className="elvt-component-info">
       <h4>Menu Item</h4>
@@ -159,7 +159,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/breadcrumb" className="elvt-component-card">
+  <a href="breadcrumb/" className="elvt-component-card">
     <div className="elvt-component-icon">🍞</div>
     <div className="elvt-component-info">
       <h4>Breadcrumb</h4>
@@ -167,7 +167,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/breadcrumb-item" className="elvt-component-card">
+  <a href="breadcrumb-item/" className="elvt-component-card">
     <div className="elvt-component-icon">🔸</div>
     <div className="elvt-component-info">
       <h4>Breadcrumb Item</h4>
@@ -175,7 +175,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/tab" className="elvt-component-card">
+  <a href="tab/" className="elvt-component-card">
     <div className="elvt-component-icon">🗂️</div>
     <div className="elvt-component-info">
       <h4>Tab</h4>
@@ -183,7 +183,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/tab-group" className="elvt-component-card">
+  <a href="tab-group/" className="elvt-component-card">
     <div className="elvt-component-icon">📑</div>
     <div className="elvt-component-info">
       <h4>Tab Group</h4>
@@ -195,7 +195,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Feedback & Status
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/badge" className="elvt-component-card">
+  <a href="badge/" className="elvt-component-card">
     <div className="elvt-component-icon">🏷️</div>
     <div className="elvt-component-info">
       <h4>Badge</h4>
@@ -203,7 +203,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/indicator" className="elvt-component-card">
+  <a href="indicator/" className="elvt-component-card">
     <div className="elvt-component-icon">🔴</div>
     <div className="elvt-component-info">
       <h4>Indicator</h4>
@@ -211,7 +211,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/notification" className="elvt-component-card">
+  <a href="notification/" className="elvt-component-card">
     <div className="elvt-component-icon">🔔</div>
     <div className="elvt-component-info">
       <h4>Notification</h4>
@@ -219,7 +219,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/progress" className="elvt-component-card">
+  <a href="progress/" className="elvt-component-card">
     <div className="elvt-component-icon">📊</div>
     <div className="elvt-component-info">
       <h4>Progress</h4>
@@ -227,7 +227,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/tooltip" className="elvt-component-card">
+  <a href="tooltip/" className="elvt-component-card">
     <div className="elvt-component-icon">💬</div>
     <div className="elvt-component-info">
       <h4>Tooltip</h4>
@@ -235,7 +235,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/toast" className="elvt-component-card">
+  <a href="toast/" className="elvt-component-card">
     <div className="elvt-component-icon">🍞</div>
     <div className="elvt-component-info">
       <h4>Toast</h4>
@@ -243,7 +243,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/skeleton" className="elvt-component-card">
+  <a href="skeleton/" className="elvt-component-card">
     <div className="elvt-component-icon">⏳</div>
     <div className="elvt-component-info">
       <h4>Skeleton</h4>
@@ -255,7 +255,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Data Display
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/avatar" className="elvt-component-card">
+  <a href="avatar/" className="elvt-component-card">
     <div className="elvt-component-icon">👤</div>
     <div className="elvt-component-info">
       <h4>Avatar</h4>
@@ -263,7 +263,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/chip" className="elvt-component-card">
+  <a href="chip/" className="elvt-component-card">
     <div className="elvt-component-icon">🏷️</div>
     <div className="elvt-component-info">
       <h4>Chip</h4>
@@ -271,7 +271,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/icon" className="elvt-component-card">
+  <a href="icon/" className="elvt-component-card">
     <div className="elvt-component-icon">⭐</div>
     <div className="elvt-component-info">
       <h4>Icon</h4>
@@ -279,7 +279,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/table" className="elvt-component-card">
+  <a href="table/" className="elvt-component-card">
     <div className="elvt-component-icon">📋</div>
     <div className="elvt-component-info">
       <h4>Table</h4>
@@ -287,7 +287,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/empty-state" className="elvt-component-card">
+  <a href="empty-state/" className="elvt-component-card">
     <div className="elvt-component-icon">📭</div>
     <div className="elvt-component-info">
       <h4>Empty State</h4>
@@ -299,7 +299,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Overlay Components
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/dialog" className="elvt-component-card">
+  <a href="dialog/" className="elvt-component-card">
     <div className="elvt-component-icon">🔲</div>
     <div className="elvt-component-info">
       <h4>Dialog</h4>
@@ -307,7 +307,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/drawer" className="elvt-component-card">
+  <a href="drawer/" className="elvt-component-card">
     <div className="elvt-component-icon">📱</div>
     <div className="elvt-component-info">
       <h4>Drawer</h4>
@@ -315,7 +315,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/dropdown" className="elvt-component-card">
+  <a href="dropdown/" className="elvt-component-card">
     <div className="elvt-component-icon">⬇️</div>
     <div className="elvt-component-info">
       <h4>Dropdown</h4>
@@ -323,7 +323,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/lightbox" className="elvt-component-card">
+  <a href="lightbox/" className="elvt-component-card">
     <div className="elvt-component-icon">🖼️</div>
     <div className="elvt-component-info">
       <h4>Lightbox</h4>
@@ -335,7 +335,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
 ## Specialized Components
 
 <div className="elvt-component-grid">
-  <a href="/docs/components/application" className="elvt-component-card">
+  <a href="application/" className="elvt-component-card">
     <div className="elvt-component-icon">🏠</div>
     <div className="elvt-component-info">
       <h4>Application</h4>
@@ -343,7 +343,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/charts" className="elvt-component-card">
+  <a href="charts/" className="elvt-component-card">
     <div className="elvt-component-icon">📊</div>
     <div className="elvt-component-info">
       <h4>Charts</h4>
@@ -351,7 +351,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/expansion-panel" className="elvt-component-card">
+  <a href="expansion-panel/" className="elvt-component-card">
     <div className="elvt-component-icon">📂</div>
     <div className="elvt-component-info">
       <h4>Expansion Panel</h4>
@@ -359,7 +359,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/paginator" className="elvt-component-card">
+  <a href="paginator/" className="elvt-component-card">
     <div className="elvt-component-icon">📄</div>
     <div className="elvt-component-info">
       <h4>Paginator</h4>
@@ -367,7 +367,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/field" className="elvt-component-card">
+  <a href="field/" className="elvt-component-card">
     <div className="elvt-component-icon">📝</div>
     <div className="elvt-component-info">
       <h4>Field</h4>
@@ -375,7 +375,7 @@ The ELEVATE Component Library provides 45+ accessible, consistent, and well-docu
     </div>
   </a>
 
-  <a href="/docs/components/toolbar" className="elvt-component-card">
+  <a href="toolbar/" className="elvt-component-card">
     <div className="elvt-component-icon">🔧</div>
     <div className="elvt-component-info">
       <h4>Toolbar</h4>
