docs: Complete Claude documentation organization and pattern updates
- Move Claude guides to .claude/docs/ folder with proper structure
- Update CLAUDE.md with references to organized documentation
- Convert patterns from .md to .mdx format for consistency
- Clean up obsolete pattern and category files
- Establish pattern for future Claude documentation organization

--- a/docs/design/colors.mdx
+++ b/docs/design/colors.mdx
@@ -26,30 +26,31 @@ The ELEVATE color system provides a comprehensive palette designed for accessibi
 
 ## Primary Color
 
-<ColorRamp template="default-with-title" title="Blue" selector="primitives-color-blue-*" />
+<ColorRamp title="Blue" selector="primitives-color-blue-*" />
 
-#### Usage Examples
+### Usage Examples (light mode)
+
 - **Primary Actions** - Blue 500 for buttons, links, CTAs
 - **Hover States** - Blue 600 for interactive feedback
-- **Focus States** - Blue 500 for accessibility indicators
+- **Focus States** - Blue 500 for focus indicators
 - **Backgrounds** - Blue 50 for subtle highlighting
 
 ## Semantic Color Palette
 
 ### Neutral Colors
-<ColorRamp template="default-with-title" title="Gray" selector="primitives-color-gray-*" exclude="primitives-color-gray-0" />
+<ColorRamp title="Gray" selector="primitives-color-gray-*" exclude="primitives-color-gray-0" />
 Used for elements that do not need to grab attention or convey a certain information.
 
 ### Success Colors
-<ColorRamp template="default" title="Green" selector="primitives-color-green-*" />
+<ColorRamp title="Green" selector="primitives-color-green-*" />
 Used for positive feedback, confirmations, and successful states.
 
 ### Warning Colors
-<ColorRamp template="default" title="Orange" selector="primitives-color-orange-*" />
+<ColorRamp title="Orange" selector="primitives-color-orange-*" />
 For cautions, important notices, and attention-grabbing elements.
 
 ### Error Colors
-<ColorRamp template="default" title="Orange" selector="primitives-color-red-*" />
+<ColorRamp title="Orange" selector="primitives-color-red-*" />
 For errors, destructive actions, and critical alerts.
 
 ### Pure Colors
