fix: Resolve build warnings and broken links
- Remove duplicate category files and obsolete documentation
- Fix broken pattern links in appshell.mdx
- Clean up temporary files from development

--- a/docs/patterns/appshell.mdx
+++ b/docs/patterns/appshell.mdx
@@ -512,9 +512,8 @@ const ModuleRenderer: React.FC<{ moduleId: string }> = ({ moduleId }) => (
 
 ## Related Patterns
 
-- **[Primary Navigation](./primary-navigation.md)** - Top-level navigation patterns
-- **[Data Tables](./data-tables.md)** - Content patterns within modules
-- **[Card Layouts](./card-layouts.md)** - Dashboard and overview layouts
+- **[Side Navigation](./side-navigation.mdx)** - Side navigation implementation patterns
+- **[Login Pattern](./login.mdx)** - Authentication and login flow patterns
 
 ---
 
