fix: Resolve infinite loops and standardize component documentation
- Fixed infinite re-render loops in ResponsiveNavigation component by moving navigationItems outside component
- Completely rewrote ComponentShowcase to eliminate render loops and improve file loading
- Added Shoelace dependency and CSS imports to fix elvt-card component styling
- Fixed elvt-card slot usage with proper header/footer slots and padding attributes
- Standardized 10 component pages with TocLinks import and consistent structure
- Added missing TocLinks to critical components: button, card, icon, input, avatar, badge, breadcrumb, checkbox, select, dialog

Technical improvements:
- Installed @shoelace-style/shoelace@^2.20.1 as required peer dependency
- Added Shoelace theme CSS imports and base path configuration
- Removed external HTML file dependencies from ComponentShowcase
- Fixed ComponentChangelog syntax in button documentation
- Improved framework transformation and code generation

--- a/docs/components/avatar/index.mdx
+++ b/docs/components/avatar/index.mdx
@@ -6,11 +6,14 @@ sidebar_position: 9
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 import { ElvtAvatar } from '@inform-elevate/elevate-core-ui/dist/react';
 
 # Avatar
 
 Avatars are visual representations of users, teams, or entities within interfaces. The ELEVATE Avatar component helps designers and developers create consistent, accessible identity systems that enhance user recognition and provide clear visual identification across all interface contexts.
+
+<TocLinks />
 
 ## Overview
 
