--- a/docs/components/badge/index.mdx
+++ b/docs/components/badge/index.mdx
@@ -6,10 +6,13 @@ sidebar_position: 10
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 
 # Badge
 
 Badges are small visual labels that help users quickly understand status and categories. The ELEVATE Badge component helps designers and developers create consistent, accessible interfaces that communicate important information without overwhelming the user.
+
+<TocLinks />
 
 ## Overview
 
