--- a/docs/components/breadcrumb/index.mdx
+++ b/docs/components/breadcrumb/index.mdx
@@ -6,8 +6,13 @@ sidebar_position: 12
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
+
+# Breadcrumb
 
 Breadcrumbs are navigational aids that show users their current location within a website's hierarchy and provide quick navigation to parent pages. The ELEVATE Breadcrumb component helps designers and developers create consistent wayfinding patterns that reduce cognitive load and improve user orientation in complex information architectures.
+
+<TocLinks />
 
 ## Overview
 
