--- a/docs/components/button/index.mdx
+++ b/docs/components/button/index.mdx
@@ -6,6 +6,7 @@ sidebar_position: 1
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 
 # Button
 
@@ -35,8 +36,7 @@ Each tone communicates a different type of action and creates visual hierarchy i
 
 <ComponentShowcase 
   title="Button Tones"
-  description="Different button tones for various use cases and semantic meaning."
-  code="variants.html">
+  description="Different button tones for various use cases and semantic meaning.">
 <elvt-stack direction="row" spacing="medium" align="center" wrap>
   <elvt-button tone="primary">Primary</elvt-button>
   <elvt-button tone="neutral">Neutral</elvt-button>
@@ -53,9 +53,8 @@ Each tone communicates a different type of action and creates visual hierarchy i
 This example demonstrates loading code from an external file for cleaner documentation:
 
 <ComponentShowcase 
-  title="Buttons from External HTML File"
-  description="Code loaded from sample.html file in the same directory."
-  code="sample.html">
+  title="Button Example"
+  description="Buttons with icons and different states.">
 <elvt-stack direction="row" spacing="medium" align="center" wrap>
   <elvt-button tone="primary">
     <elvt-icon slot="prefix" icon="mdi:plus"></elvt-icon>
@@ -78,8 +77,7 @@ Buttons can be disabled when an action is temporarily unavailable, or show a sel
 
 <ComponentShowcase 
   title="Button States"
-  description="Buttons support disabled and selected states."
-  code="states.html">
+  description="Buttons support disabled and selected states.">
 <elvt-stack direction="row" spacing="medium" align="center" wrap>
   <elvt-button tone="primary" disabled>Disabled Button</elvt-button>
   <elvt-button tone="primary" selected>Selected Button</elvt-button>
@@ -96,8 +94,7 @@ Icons before text help identify the action type or category.
 
 <ComponentShowcase 
   title="Buttons with Prefix Icons"
-  description="Icons placed before button text provide visual context for the action."
-  code="icons-prefix.html">
+  description="Icons placed before button text provide visual context for the action.">
 <elvt-stack direction="row" spacing="medium" align="center" wrap>
   <elvt-button tone="primary">
     <elvt-icon slot="prefix" icon="mdi:plus"></elvt-icon>
@@ -120,8 +117,7 @@ Icons after text suggest direction or outcome of the action.
 
 <ComponentShowcase
   title="Buttons with Suffix Icons"
-  description="Icons placed after button text indicate direction or outcome."
-  code="icons-suffix.html">
+  description="Icons placed after button text indicate direction or outcome.">
   <elvt-stack direction="row" spacing="medium" align="center" wrap>
     <elvt-button tone="primary">
       Continue
@@ -144,8 +140,7 @@ Icon-only buttons save space but require clear, universally understood icons and
 
 <ComponentShowcase
   title="Icon-Only Buttons"
-  description="Buttons with only icons should have proper accessibility attributes."
-  code="accessibility.html">
+  description="Buttons with only icons should have proper accessibility attributes.">
   <elvt-stack direction="row" spacing="medium" align="center">
     <elvt-button tone="primary" title="Add new item" aria-label="Add new item">
       <elvt-icon icon="mdi:plus"></elvt-icon>
@@ -166,8 +161,7 @@ Icon-only buttons save space but require clear, universally understood icons and
 
 <ComponentShowcase
   title="Button Sizes"
-  description="Three button sizes available - small, medium (default), and large."
-  code="sizes.html">
+  description="Three button sizes available - small, medium (default), and large.">
   <elvt-stack direction="row" spacing="large" align="center">
     <elvt-button size="small">Small</elvt-button>
     <elvt-button size="medium">Medium</elvt-button>
@@ -364,9 +358,4 @@ import '@inform-elevate/elevate-core-ui/dist/components/button/button.js';
 
 ## Changelog
 
-<ComponentChangelog 
-  component="elvt-button" 
-  maxVersions={5}
-  showMetadata={true}
-  compactMode={false}
-/>
+<ComponentChangelog component="elvt-button" />
