--- a/docs/components/checkbox/index.mdx
+++ b/docs/components/checkbox/index.mdx
@@ -6,10 +6,13 @@ sidebar_position: 5
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 
 # Checkbox
 
 Checkboxes are form controls that allow users to select one or multiple options from a list. The ELEVATE Checkbox component helps designers and developers create consistent, accessible selection interfaces that clearly communicate state and provide inclusive interaction patterns for all users.
+
+<TocLinks />
 
 ## Overview
 
