--- a/docs/components/dialog/index.mdx
+++ b/docs/components/dialog/index.mdx
@@ -6,10 +6,15 @@ sidebar_position: 17
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
+# Dialog
+
 Dialogs are modal windows that interrupt the user's workflow to present important information, gather input, or require decisions. The ELEVATE Dialog component provides accessible, responsive modal interactions for all INFORM applications.
+
+<TocLinks />
 
 ## Overview
 
