--- a/docs/components/icon/index.mdx
+++ b/docs/components/icon/index.mdx
@@ -6,8 +6,13 @@ sidebar_position: 11
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
+
+# Icon
 
 Icons create visual consistency and improve interface comprehension through universal symbols. The ELEVATE Icon component helps designers and developers create consistent, accessible interfaces that communicate effectively across language and cultural barriers.
+
+<TocLinks />
 
 ## Overview
 
