--- a/docs/components/input/index.mdx
+++ b/docs/components/input/index.mdx
@@ -6,10 +6,13 @@ sidebar_position: 3
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 
 # Input
 
 Input components are essential form elements that allow users to enter text, numbers, and other data. The ELEVATE Input component provides consistent styling, validation states, and accessibility features across all INFORM applications.
+
+<TocLinks />
 
 ## Overview
 
