--- a/docs/components/select/index.mdx
+++ b/docs/components/select/index.mdx
@@ -6,10 +6,13 @@ sidebar_position: 4
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 
 # Select
 
 Select components provide efficient option selection through dropdown interfaces that save screen space while offering clear choices. The ELEVATE Select component helps designers and developers create consistent, accessible selection interfaces that work well for both simple and complex option sets.
+
+<TocLinks />
 
 ## Overview
 
