--- a/docs/components/card/index.mdx
+++ b/docs/components/card/index.mdx
@@ -6,6 +6,7 @@ sidebar_position: 2
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
 import ComponentChangelog from '@site/src/components/ComponentChangelog';
+import TocLinks from '@site/src/components/TocLinks';
 import { ElvtCard, ElvtButton } from '@inform-elevate/elevate-core-ui/dist/react';
 
 # Card
